# RustedLessPass

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  index.scss  manifest.json  service_worker.js
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐛-bug-report.md  👽️-other.md  🔍️-question.md
.github/workflows/: cargo-test.yml  deploy.yml  publish-app.yml  publish-to-manual-release.yml  rust-clippy.yml  test-build-only.yml
assets/: favicon.icns
assets/icons/: maskable_icon_x512.icns
browser-extension/: head.js  index.html  main.js  manifest.json
lib/lesspass.rs/: Cargo.toml
lib/lesspass.rs/src/: lib.rs  main.rs
lib/lesspass.rs/tests/: blackbox.rs  make-blackbox-tests.sh
lib/ui/: custom.css  index.html
src/: app.rs  fingerprintgen.rs  lesspass.rs  main.rs  passgen.rs  password_utils.rs  settings.rs  slider.rs  switch.rs  text_input.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html
