[package]
name = "rustlesspass"
version = "0.1.0"
edition = "2021"

[dependencies]
yew-hooks = "0.3"
wasm-logger = "0.2"
log = "0.4"
lesspass = { path = "./lib/lesspass.rs" }
gloo = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.41"

[dependencies.yew]
version = "0.21"
features = ["csr"]

[dependencies.web-sys]
version = "0.3"
features = ["Clipboard", "Window", "Navigator", "Permissions"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]