[package]
name = "rustedlesspass-web"
version = "1.1.1"
edition = "2021"

[dependencies]
sha2 = "0.10"
yew-hooks = "0.3"
wasm-logger = "0.2"
log = "0.4"
lesspass = { path = "./lib/lesspass.rs" }
gloo = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

[dependencies.yew]
version = "0.21"
features = ["csr"]

[dependencies.web-sys]
version = "0.3"
features = ["Clipboard", "Window", "Navigator", "Permissions"]

[dependencies.serde]
version = "1"
features = ["derive"]


[workspace]
members = ["src-tauri"]